Decrease chart-container width to prevent charts getting cut off

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,8 @@
 
+a:hover {
+    cursor: pointer;
+}
+
 // thick left border for dashboard stat blocks
 .border {
 
@@ -76,14 +80,14 @@
     //width: auto;
 
     @media (min-width: 768px) {
-        width: 752px;
+        width: 736px;
     }
 
     @media (min-width: 992px) {
         width: 944px;
 
         &--48 {
-            width: 768px;
+            width: 752px;
         }
 
 
